<resources>
    <string name="app_name">PracticaFacturas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="listfactura_fragment">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tvFecha">Fecha</string>
    <string name="importeOrdenacion">importe ordenacion</string>
    <string name="descEstado">estado</string>
    <string name="tvFechaDeAdmision">Con fecha de admision</string>
    <string name="btFecha">dia/mes/año</string>
    <string name="tvHasta">Hasta:</string>
    <string name="tvDesde">Desde</string>
    <string name="tvImporte">Por un importe</string>
    <string name="tvPorEstado">Por estado</string>
    <string name="chkPagada">Pagadas</string>
    <string name="chkPendiente">Pendientes de pago</string>
    <string name="tvNoData">No hay datos disponibles...</string>
    <string name="tvLoading">Cargando...</string>
    <string name="btFilter">Aplicar</string>
    <string name="btEliminateFilter">Eliminar filtros</string>
    <string name="action_filter">FIltro</string>
    <string name="facturafiltro_fragment">FacturaFiltroFragment</string>
    <string name="tvFacturas">Facturas</string>
    <string name="tvFiltroFacturas">Filtrar facturas</string>
    <string name="action_nofilter">NoFilter</string>
</resources>