<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.factura.fragment.BillFilterFragment">


    <TextView
        android:id="@+id/tvFiltroFacturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFiltroFacturas"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFechaDeAdmision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvFechaDeAdmision"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDesde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvDesde"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btDesde"
            style="@style/Theme.PracticaFacturas.Graybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/btFecha"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvDesde"
            app:layout_constraintTop_toBottomOf="@+id/tvDesde" />

        <TextView
            android:id="@+id/tvHasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvHasta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDesde"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btHasta"
            style="@style/Theme.PracticaFacturas.Graybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/btFecha"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvHasta"
            app:layout_constraintTop_toBottomOf="@+id/tvHasta" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvImporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/tvImporte"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sldImporte"
            style="@style/Widget.App.Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0F"
            android:valueTo="100" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPorEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPorEstado"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkPagada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkPagada" />

        <CheckBox
            android:id="@+id/chkPendiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkPendiente" />
    </LinearLayout>


    <Button
        android:id="@+id/btFilter"
        style="@style/Theme.PracticaFacturas.Greenbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:text="@string/btFilter" />

    <Button
        android:id="@+id/btEliminateFilter"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btEliminateFilter"
        android:textColor="@color/darkGray" />

    <include
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
