<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/billfilter_estado"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPorEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPorEstado"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/chkPagada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkPagada" />

    <CheckBox
        android:id="@+id/chkPendiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkPendiente" />
</LinearLayout>