<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/billfilter_fecha"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvFechaDeEmision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tvFechaDeEmision"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDesde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvDesde"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btDesde"
            style="@style/Theme.PracticaFacturas.Graybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/btFecha"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvDesde"
            app:layout_constraintTop_toBottomOf="@+id/tvDesde" />

        <TextView
            android:id="@+id/tvHasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvHasta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDesde"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btHasta"
            style="@style/Theme.PracticaFacturas.Graybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/btFecha"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tvHasta"
            app:layout_constraintTop_toBottomOf="@+id/tvHasta" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>